# cas

./: Cargo.toml  README.md
cas-core/: Cargo.toml
cas-core/src/: ast.rs  bezier.rs  calculus.rs  error.rs  eval.rs  helpers.rs  lib.rs  parse.rs  polynomial.rs  rational.rs  trigonometry.rs
cas-core/src/expr/: constant.rs  factorial.rs  mod.rs  power.rs  product.rs  sum.rs  symbol.rs
cas-core/src/expression/: fraction.rs  integer.rs  mod.rs  product.rs  symbol.rs
cas-core/src/expression2/: add.rs  mod.rs  mul.rs  neg.rs
cas-core/src/expression3/: mod.rs
cas-core/src/expression4/: constant.rs  factorial.rs  mod.rs  power.rs  product.rs  sum.rs  symbol.rs
cas-core/src/parse/: ast.rs  mod.rs
cas-core/src/parse/simplify/: difference.rs  factorial.rs  fraction.rs  function.rs  mod.rs  negation.rs  power.rs  product.rs  quotient.rs  sum.rs
cas-core/src/simplify/: difference.rs  factorial.rs  fraction.rs  function.rs  mod.rs  negation.rs  power.rs  product.rs  quotient.rs  sum.rs
cas-core/src/tokenize/: mod.rs  tokens.rs
math-exps/: Cargo.toml
math-exps/src/: main.rs
