[package]
name = "cas-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
num = { version = "0.4.0" }
vec1 = "1.10.1"
auto_ops = "0.3.0"
